# ucp

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  README.md  entrypoint.sh  firebase.json  pyproject.toml
.streamlit/: secrets.toml.template
agent/: mock_agent.py  sdk_agent.py
docs/: 2nd-poc.md  3rd-poc.md  POC2.md  POC3-business.md  POC3-tech.md  POC3.md  SHARE.md  streamlit-cloud-deploy.md
public/: placeholder.txt
scripts/: debug_serpapi.py  deploy.ps1  gen_keys.py  run_demo.py  smoke_2nd_poc.py  smoke_3rd_poc.py  smoke_crypto.py  smoke_e2e.py  smoke_sdk.py
services/merchant/: catalog.py  main.py  serpapi_client.py
services/psp/: main.py
services/shared/: comparison.py  crypto.py  eventlog.py  intent.py  mandates.py  reputation.py  stub_sig.py
ui/: app.py
