[project]
name = "ucp-ap2-demo"
version = "0.1.0"
description = "UCP + AP2 agentic commerce demo (merchant, PSP, agent, Streamlit UI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
    "cryptography>=43",
    "joserfc>=1.0",
    "rfc8785>=0.1.4",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
]

[dependency-groups]
agent = [
    "claude-agent-sdk>=0.1",
]

[tool.uv]
package = false
